[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.1.0"
description = "A useful box."
[tool.poetry.dependencies]
peewee = "==3.13.2"
pyinquirer = "==1.0.3"
python = "^3.7"
tabulate = "==0.8.3"
cloudpickle = "^1.3"
colorama = "^0.4.3"
coverage = "^5.1"
git-client = "^0.2.1"
karellen-sqlite = "^0.0.3"
simplejson = "^3.17"
